--- a/.htaccess
+++ b/.htaccess
@@ -1,13 +1,17 @@
 Options -Multiviews
 RewriteEngine on
 
-RewriteRule ^chat/([0-9]+)$ chat.php?chat=$1 [QSA]
-RewriteRule ^schueler/$ schueler_liste.php [QSA]
-RewriteRule ^schueler$ schueler_liste.php [QSA]
-RewriteRule ^schueler/([0-9]+)$ schueler.php?schueler=$1 [QSA]
-RewriteRule ^blog/([0-9]+)$ blog.php?blog=$1 [QSA]
-RewriteRule ^zeitung/$ zeitung.php [QSA]
-RewriteRule ^zeitung$ zeitung.php [QSA]
-RewriteRule ^zeitung/([0-9]+)$ zeitung.php?zeitung=$1 [QSA]
+RewriteRule ^account/login$ internal/account/login.php [QSA]
+RewriteRule ^account/register$ internal/account/register.php [QSA]
+RewriteRule ^account/logout$ internal/account/logout.php [QSA]
+
+RewriteRule ^chat/([0-9]+)$ internal/information/chat.php?chat=$1 [QSA]
+RewriteRule ^schueler/$ internal/information/schueler_liste.php [QSA]
+RewriteRule ^schueler$ internal/information/schueler_liste.php [QSA]
+RewriteRule ^schueler/([0-9]+)$ internal/information/schueler.php?schueler=$1 [QSA]
+RewriteRule ^blog/([0-9]+)$ internal/information/blog.php?blog=$1 [QSA]
+RewriteRule ^zeitung/$ internal/information/zeitung.php [QSA]
+RewriteRule ^zeitung$ internal/information/zeitung.php [QSA]
+RewriteRule ^zeitung/([0-9]+)$ internal/information/zeitung.php?zeitung=$1 [QSA]
 
 ErrorDocument 404 /error/404.html
