--- a/.htaccess
+++ b/.htaccess
@@ -13,6 +13,6 @@ RewriteRule ^blog/([0-9]+)$ internal/information/blog.php?blog=$1 [QSA]
 RewriteRule ^zeitung/$ internal/information/zeitung.php [QSA]
 RewriteRule ^zeitung$ internal/information/zeitung.php [QSA]
 RewriteRule ^zeitung/([0-9]+)$ internal/information/zeitung.php?zeitung=$1 [QSA]
-RewriteRule ^impressum$ internal/information/impressum.html [QSA]
+RewriteRule ^impressum$ internal/information/impressum.php [QSA]
 
 ErrorDocument 404 /error/404.html
