Bei Mobilgeräten die CHatliste links ausgebelendet

--- a/.htaccess
+++ b/.htaccess
@@ -5,7 +5,10 @@ RewriteRule ^account/login$ internal/account/login.php [QSA]
 RewriteRule ^account/register$ internal/account/register.php [QSA]
 RewriteRule ^account/logout$ internal/account/logout.php [QSA]
 
+RewriteRule ^chat$ internal/information/chat.php [QSA]
+RewriteRule ^chat/$ internal/information/chat.php [QSA]
 RewriteRule ^chat/([0-9]+)$ internal/information/chat.php?chat=$1 [QSA]
+RewriteRule ^chat/list$ internal/information/chat.php?list=true [QSA]
 RewriteRule ^schueler/$ internal/information/schueler_liste.php [QSA]
 RewriteRule ^schueler$ internal/information/schueler_liste.php [QSA]
 RewriteRule ^schueler/([0-9]+)$ internal/information/schueler.php?schueler=$1 [QSA]
